--- a/src/main/resources/templates/producto/fragmentos.html
+++ b/src/main/resources/templates/producto/fragmentos.html
@@ -40,11 +40,12 @@
                               method="POST" class="was-validated" enctype="multipart/form-data">
                             <div class="modal-body">
                                 <div class="mb-3">
-                                    <label for="idCategoria">[[#{producto.categoria}]]</label>
-                                    <select name="idCategoria" class="form-select"/>
-                                    <option th:each="item : ${categorias}"
-                                            th:value="${item.idCategoria}"
-                                            th:text="${item.descripcion}"></option>
+                                    <label for="categoria.idCategoria">[[#{producto.categoria}]]</label>
+                                    <select name="categoria.idCategoria" class="form-select">
+                                        <option th:each="item : ${categorias}"
+                                                th:value="${item.idCategoria}"
+                                                th:text="${item.descripcion}"></option>
+                                    </select>
                                 </div>
                                 <div class="mb-3">
                                     <label for="descripcion">[[#{producto.descripcion}]]</label>
@@ -105,7 +106,7 @@
                                         <tr th:each="producto, contador : ${productos}">
                                             <td>[[${contador.count}]]</td>
                                             <td>[[${producto.descripcion}]]</td>                                           
-                                            <td>[[${producto.idCategoria}]]</td>
+                                            <td>[[${producto.categoria.descripcion}]]</td>
                                             <td>[[${producto.precio}]]</td>
                                             <td>[[${producto.existencias}]]</td>
                                             <td th:text="${producto.activo} ? 'Activa' : 'Inactiva'" />
@@ -158,9 +159,9 @@
                                             </div>
                                             <div class="card-body">
                                                 <div class="mb-3">
-                                                    <label for="idCategoria">[[#{producto.categoria}]]</label>
-                                                    <select name="idCategoria" class="form-select"
-                                                            th:field="*{idCategoria}">
+                                                    <label for="categoria.idCategoria">[[#{producto.categoria}]]</label>
+                                                    <select name="categoria.idCategoria" class="form-select"
+                                                            th:field="*{categoria.idCategoria}">
                                                         <option th:each="item : ${categorias}"
                                                                 th:value="${item.idCategoria}"
                                                                 th:text="${item.descripcion}"></option>
