--- a/src/main/resources/templates/pruebas/fragmentos.html
+++ b/src/main/resources/templates/pruebas/fragmentos.html
@@ -154,6 +154,30 @@
                         </div>
                     </form>
                 </div>
+                <div class="col-md-3">
+                    <form method="POST" th:action="@{/pruebas/query4}" class="was-validated">
+                        <div class="card">                            
+                            <div class="card-body">
+                                <div class="mb-3">
+                                    <label for="activo">Activo</label>
+                                    <select class="form-control" th:name="activo" required="true">
+                                        <option value="true">Sí</option>
+                                        <option value="false">No</option>
+                                    </select>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="precio">Precio Mayor Que</label>
+                                    <input type="number" class="form-control" th:name="precio" required="true"/>
+                                </div>
+                            </div>
+                            <div class="card-footer text-center">
+                                <button type="submit" class="btn btn-secondary">
+                                    <i class="fas fa-check"></i> Buscar
+                                </button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
             </div>
         </section> 
     </body>
