Finalización sem12(reportes jasper)

--- a/src/main/resources/templates/layout/plantilla.html
+++ b/src/main/resources/templates/layout/plantilla.html
@@ -45,6 +45,9 @@
                                     <li>
                                         <a class="dropdown-item"  th:href="@{/pruebas/consultas}">[[#{plantilla.consultas}]]</a>
                                     </li>
+                                    <li>
+                                        <a class="dropdown-item"  th:href="@{/reportes/principal}">[[#{plantilla.reportes}]]</a>
+                                    </li>
 
                                 </ul>
                             </li>
